# hinson-skills

./: README.md
epub/: .gitignore  DEVELOPMENT.md  GIT_SETUP.md  PROJECT_INFO.txt  QUICKREF.md  README.md  SKILL.md  SUMMARY.md  pyproject.toml  pytest.ini  run_pytest.sh
epub/scripts/: README.md  check_env.py  create_epub.py  examples.sh  extract_chapters.py  extract_images.py  extract_metadata.py  extract_text.py  install.sh  merge_epubs.py  split_epub.py  update_metadata.py  validate_epub.py
epub/tests/: PYTEST_MIGRATION.md  README.md  TESTING_COMPLETE.md  TEST_SUMMARY.md  __init__.py  __main__.py  conftest.py  pytest.ini  run_tests.sh  test_extract_chapters.py  test_extract_metadata.py  test_extract_text.py  test_helpers.py  test_other_scripts.py  test_performance.py
